docker_deploy/kubernetes-stellan/examples/john2x-opentaproject-org/03-ingress-wildcard-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opentaproject_org-ingress
  namespace: opentaproject-org
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: opentaproject.org
      http:
        paths:
          - path: /
            backend:
              serviceName: opentaproject_org-service
              servicePort: http
    - host: "*.opentaproject.org"
      http:
        paths:
          - path: /
            backend:
              serviceName: opentaproject_org-service
              servicePort: http
