docker_deploy/kubernetes-stellan/examples/john2x-opentaproject-org/06-ingress-default-http-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-http-backend-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: default-opentaproject-org-staging-tls
      hosts:
        - default.opentaproject.org
  rules:
    - host: default.opentaproject.org
      http:
        paths:
          - path: /
            backend:
              serviceName: default-http-backend
              servicePort: 80
